# teachability-compiler

./: .gitignore  AGENTS.md  LICENSE-NOTICE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EXPERIMENT_PLAN.md  RESEARCH_SPEC.md
results/: CHECKPOINT_ARCHIVE.md  RUNG_AB_REPORT.md  commutator_tail.json  commutator_tail_10k.json  commutator_tail_30k.json  commutator_tail_late.json  compile_compiler_eps10_seed10.json  compile_compiler_eps10_seed11.json  compile_compiler_eps10_seed12.json  compile_compiler_seed10.json  compile_compiler_seed11.json  compile_loss_greedy_seed10.json  compile_loss_greedy_seed11.json  compile_mixed_review_seed10.json  compile_mixed_review_seed11.json  compile_random_seed10.json  compile_random_seed11.json  compile_random_seed12.json  compile_reference_seed0.json  compile_staged_seed10.json  compile_staged_seed11.json  compile_staged_seed12.json  decision_horizon_10k.json  decision_horizon_300.json  decision_horizon_3000.json  decision_horizon_30k.json  linearization_horizon.json  linearization_horizon_10k.json  linearization_horizon_30k.json  linearization_horizon_late.json  lm_race_compiler_seed10.json  lm_race_edu_heavy_seed10.json  lm_race_report.json  lm_race_uniform_seed10.json  lm_race_worst_probe_seed10.json  lm_reference_seed0.json  residual_mlp_eval.json  rung_b_reanalysis.json
src/teachability_compiler/: __init__.py  evaluation.py  metrics.py  policies.py  predictor.py  search.py  simulator.py  state.py  synthetic.py
src/teachability_compiler/lm/: __init__.py  cluster_actions.py  corpus.py  embeddings.py  features.py  lm_oracle.py  lowrank_simulator.py  tokenize_actions.py
src/teachability_compiler/lm/experiments/: __init__.py  compile_lm.py  race_report.py  reference_run.py
src/teachability_compiler/real/: __init__.py  decision_metrics.py  hidden_eval.py  mlp_predictor.py  model.py  oracle.py  persistence.py  tasks.py
src/teachability_compiler/real/experiments/: __init__.py  commutator_tail.py  compile_curriculum.py  decision_horizon.py  linearization_horizon.py  reanalysis_rung_b.py  train_residual_mlp.py
tests/: test_compile_smoke.py  test_decision_and_mlp.py  test_lm_actions.py  test_lm_oracle_smoke.py  test_lm_race_smoke.py  test_milestone.py  test_noncommutativity.py  test_real_smoke.py  test_state.py
