[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teachability-compiler"
version = "0.1.0"
description = "Search for compact ordered curricula using learned noncommutative training dynamics."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]
real = [
  "torch>=2.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

# torch APIs are partially typed; relax Any-propagation rules for the
# torch-facing subpackage while keeping the numpy core fully strict.
[[tool.mypy.overrides]]
module = "teachability_compiler.real.*"
warn_return_any = false
disallow_untyped_calls = false
disallow_any_generics = false
